# ai-tutor-rag

./: .dockerignore  .gitignore  ARCHITECTURE.md  DataLoader.py  DataSearcher.py  Dockerfile  Dockerfile_Guardrails  Embedder.py  LLMAnswer.py  NeoDataSearcher.py  NeoInteracter.py  Prompts.py  QDataSearcher.py  QInteracter.py  README.md  Utils.py  app.py  bad_perms.txt  docker-compose.yml  guardrails_config.py  logging_setup.py  pyproject.toml  pytest.ini  rag.py  ragPydantic.py  requirements.txt  settings.py  test_neo4j_rag.py
Databases/: FindsForNeo.py  NeoInteracter.py  QInteracter.py
Handling/: Chunker.py  Embedder.py
LLM/: Agent.py  LLMAnswer.py  Prompts.py
Trash/: NeoDataLoader.py  NeoDataSearcher.py  QDataLoader.py  QDataSearcher.py
libs/: GDBInteracter.py  VDBInteracter.py
ms_graphrag_neo4j/src/ms_graphrag_neo4j/: cypher_queries.py  ms_graphrag.py  prompts.py
services/: __init__.py  load_service.py  query_service.py
src/: __init__.py
src/Databases/: FindsForNeo.py  NeoInteracter.py  QInteracter.py
src/Handling/: Chunker.py  Embedder.py
src/LLM/: Agent.py  LLMAnswer.py  OutFormat.py  Prompts.py
src/LLM/Nodes/: Helpers.py  Nodes.py  __init__.py
src/services/: load_service.py  query_service.py  test_generation_service.py
src/utils/: MyLogs.py  Tools.py  ragPydantic.py  rag_context_helpers.py  rag_request_context.py
tests/: SETUP.md  conftest.py  test_load.py  test_query.py
utils/: MyLogs.py  Tools.py
