[project]
name = "ai-tutor-rag"
version = "0.1.0"
description = "RAG сервис для ai-tutor"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "distro==1.9.0",
    "fastapi==0.118.0",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "greenlet==3.2.4",
    "grpcio==1.75.1",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "jiter==0.11.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-core>=0.3.78,<1.0.0",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.4.32",
    "MarkupSafe==3.0.3",
    "mpmath==1.3.0",
    "neo4j>=5.28.1,<6",
    "openai>=1.104.2,<2.0.0",
    "orjson==3.11.3",
    "packaging==25.0",
    "portalocker==3.2.0",
    "protobuf==6.32.1",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "qdrant-client==1.15.1",
    "regex==2025.9.18",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.43",
    "starlette==0.48.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.56.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "zstandard==0.25.0",
    "uvicorn==0.18.2",
    "dotenv==0.9.9",
    "langchain-openai==0.3.35",
    "langgraph>=0.2.0",
    "torch",
    "torchvision",
    "torchaudio",
    "ms_graphrag_neo4j",
]

[tool.uv.sources]
ms_graphrag_neo4j = { path = "ms_graphrag_neo4j", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
